Import of JAW/Chart-Strip-1.07 from CPAN.
gitpan-cpan-distribution: Chart-Strip
gitpan-cpan-version:      1.07
gitpan-cpan-path:         JAW/Chart-Strip-1.07.tar.gz
gitpan-cpan-author:       JAW
gitpan-cpan-maturity:     released

--- a/eg/Makefile
+++ b/eg/Makefile
@@ -1,5 +1,5 @@
 
-all: ex1.png ex2.png ex3.png ex4.png ex5.png
+all: ex1.png ex2.png ex3.png ex4.png ex5.png ex6.png
 
 .SUFFIXES: .pl .png
 .pl.png:
